# DesktopCountdown

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: BACKLOG.md  CONFIGURATION.md  INTERNALS.md
docs/superpowers/plans/: 2026-07-10-desktop-countdown-renderer.md  2026-07-11-settings-window.md  2026-07-12-line-list.md  2026-07-14-preset-model.md  2026-07-15-daily-countdown.md  macos-spike-result.md  spike-result.md
docs/superpowers/specs/: 2026-07-10-desktop-countdown-design.md  2026-07-11-settings-window-design.md  2026-07-12-line-list-design.md  2026-07-14-macos-port-design.md  2026-07-14-macos-port-handoff.md  2026-07-14-preset-model-design.md  2026-07-15-daily-countdown-design.md
macos/: Info.plist
src/: app.rs  autostart.rs  backoff.rs  color.rs  countdown.rs  dcomp.rs  fonts.rs  layout.rs  lib.rs  logging.rs  main.rs  monitors.rs  paths.rs  single_instance.rs  tokens.rs  tray.rs  watch.rs  workerw.rs
src/config/: io.rs  merge.rs  mod.rs  schema.rs
src/platform/: mod.rs
src/platform/macos/: autostart.rs  desktop_window.rs  fonts.rs  mod.rs  monitors.rs  panels.rs  single_instance.rs  tray.rs  watch.rs
src/platform/macos/render/: mod.rs  text.rs
src/platform/windows/: autostart.rs  backoff.rs  dcomp.rs  mod.rs  monitors.rs  panels.rs  single_instance.rs  tray.rs  watch.rs  workerw.rs
src/platform/windows/render/: text.rs
src/render/: mod.rs  outline.rs  text.rs
src/settings/: app.rs  lines.rs  mod.rs  overrides.rs  presets.rs  presets_io.rs  widgets.rs
