[package]
name = "desktop-countdown"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[lib]
name = "desktop_countdown"
path = "src/lib.rs"

[[bin]]
name = "desktop-countdown"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
notify = "8"
tray-icon = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]
