[package]
name = "desktop-countdown"
version = "1.0.0"
edition = "2021"
rust-version = "1.92"
description = "A countdown drawn onto the Windows wallpaper layer, under the desktop icons"
authors = ["Jeonghyeon Ha <hajh0104@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HaJH/DesktopCountdown"
keywords = ["countdown", "wallpaper", "desktop", "windows", "directcomposition"]
categories = ["gui", "os::windows-apis"]

[lib]
name = "desktop_countdown"
path = "src/lib.rs"

[[bin]]
name = "desktop-countdown"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
eframe = "0.35"
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
notify = "8"
tray-icon = "0.24"
# Matches the version epaint 0.35 uses internally, so font-parsing behavior stays
# consistent between our pre-validation and egui's own loading.
skrifa = "0.42"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
windows-numerics = "0.3"
# Direct dependency required so the `#[implement]` macro's generated code (which
# refers to the `windows_core` crate by name) resolves; we otherwise only use it
# through the `windows::core` re-export.
windows-core = "0.62"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[build-dependencies]
winresource = "0.1.31"
